--- a/lab/ars/premio_nobel.htm
+++ b/lab/ars/premio_nobel.htm
@@ -2,11 +2,13 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="arsstyle1.css" type="text/css">
 
-<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit‡, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, la donna nel pubblico impiego">
+<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit√†, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, la donna nel pubblico impiego">
 
-<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, tesi di laurea, giurisprudenza, facolt‡ di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit‡, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit‡, lavoratori, studenti, operaio, immagine, testo, Stalin, unit‡, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit‡, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit‡ sanitarie locali, disoccupazione, mondo del lavoro">
+<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, tesi di laurea, giurisprudenza, facolt√† di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit√†, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit√†, lavoratori, studenti, operaio, immagine, testo, Stalin, unit√†, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit√†, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit√† sanitarie locali, disoccupazione, mondo del lavoro">
 
 <TITLE>ARMONICA ROTAZIONE SOCIALE - Qualcuno gradisce un Premio Nobel?</TITLE>
 
@@ -32,7 +34,7 @@
 
 <hr color="navy" size="1">
 
-<center><font face="verdana" color="navy" size="1"><i><a class="navy" href="legal_it.htm">Copyright ©</a> 25/08/<a class="navy" href="../tec/index.htm">43</a> <a class="navy" href="../eulab/noi.htm">Danilo D'Antonio</a> - <a class="navy" href="legal_it.htm">Alcuni diritti concessi</a><a class="navy" href=""></a></i></font></center>
+<center><font face="verdana" color="navy" size="1"><i><a class="navy" href="legal_it.htm">Copyright ¬©</a> 25/08/<a class="navy" href="../tec/index.htm">43</a> <a class="navy" href="../eulab/noi.htm">Danilo D'Antonio</a> - <a class="navy" href="legal_it.htm">Alcuni diritti concessi</a><a class="navy" href=""></a></i></font></center>
 
 <font face="verdana" color="#004488">
 
@@ -40,11 +42,11 @@
 
 <br><br><br><br>
 
-Molto lentamente, partendo dalle prime elezioni politiche avvenute nel 1861, l'Italia ha conquistato in vari passi successivi una condizione relativamente democratica almeno per quanto riguarda l'‡mbito governativo. 
+Molto lentamente, partendo dalle prime elezioni politiche avvenute nel 1861, l'Italia ha conquistato in vari passi successivi una condizione relativamente democratica almeno per quanto riguarda l'√†mbito governativo. 
 
 <br><br>
 
-Gli iscritti alle liste in quel lontanto 1861 furono appena 418.695, il diritto di voto essendo limitato agli uomini di et‡ superiore ai 25 anni, alfabetizzati e paganti un certo ammontare di tasse:
+Gli iscritti alle liste in quel lontanto 1861 furono appena 418.695, il diritto di voto essendo limitato agli uomini di et√† superiore ai 25 anni, alfabetizzati e paganti un certo ammontare di tasse:
 
 <br><br>
 
@@ -52,7 +54,7 @@ http://it.wikipedia.org/wiki/Elezioni_politiche_italiane_del_1861
 
 <br><br>
 
-Nel 1919 gli iscritti alle liste erano gi‡ divenuti 10.235.874:
+Nel 1919 gli iscritti alle liste erano gi√† divenuti 10.235.874:
 
 <br><br>
 
@@ -60,7 +62,7 @@ http://it.wikipedia.org/wiki/Elezioni_politiche_italiane_del_1919
 
 <br><br>
 
-ma solo nel 1946 gli elettori giunsero a triplicarsi, avendo ottenuto diritto di voto gli italiani tutti, uomini e donne, di almeno 21 anni d'et‡:
+ma solo nel 1946 gli elettori giunsero a triplicarsi, avendo ottenuto diritto di voto gli italiani tutti, uomini e donne, di almeno 21 anni d'et√†:
 
 <br><br>
 
@@ -68,35 +70,35 @@ http://it.wikipedia.org/wiki/Elezioni_politiche_italiane_del_1946
 
 <br><br><br>
 
-Questa breve, quanto di sicuro approssimativa, sintesi storica ci aiuta a rinverdire la consapevolezza che la vita Ë un processo dinamico e non un immobile stato. Occorre far oculato uso della Storia per capire che, quando diciamo che il nostro Paese Ë democratico, si tratta ancora ben pi˘ di una aspirazione che non di una reale condizione.
+Questa breve, quanto di sicuro approssimativa, sintesi storica ci aiuta a rinverdire la consapevolezza che la vita √® un processo dinamico e non un immobile stato. Occorre far oculato uso della Storia per capire che, quando diciamo che il nostro Paese √® democratico, si tratta ancora ben pi√π di una aspirazione che non di una reale condizione.
 
 <br><br>
 
-Il solo ‡mbito pubblico finora democratizzato Ë stato infatti quello governativo (con l'estromissione del tiranno maximo e l'ingresso di un delegato a tempo determinato scelto dal popolo). L'altro complementare ‡mbito, importante perchÈ oltremodo consistente, la funzione pubblica, Ë rimasto in mano a tanti piccoli tiranni insediati a vita.
+Il solo √†mbito pubblico finora democratizzato √® stato infatti quello governativo (con l'estromissione del tiranno maximo e l'ingresso di un delegato a tempo determinato scelto dal popolo). L'altro complementare √†mbito, importante perch√© oltremodo consistente, la funzione pubblica, √® rimasto in mano a tanti piccoli tiranni insediati a vita.
 
 <br><br><br>
 
-Questa incredibile dimenticanza Ë avvenuta perchÈ coloro i quali avrebbero dovuto farci avanzare si sono invece costantemente tratti indietro. I tanto onorati insegnanti della scuola e docenti universitari si sono guardati bene dal farci notare che in democrazia ogni ruolo pubblico, dal pi˘ elevato al meno appariscente, deve essere periodicamente restituito al popolo poichÈ da questo per intero va potenzialmente condiviso. Pur con grandi difficolt‡, partendo da un parco elettori di appena 418.695 unit‡, per giunta fatto di soli uomini, siamo giunti ad una rosa di votanti, comprendente uomini e donne, cresciuta fino a raggiungere oggi le 50.000.000 di unit‡.
+Questa incredibile dimenticanza √® avvenuta perch√© coloro i quali avrebbero dovuto farci avanzare si sono invece costantemente tratti indietro. I tanto onorati insegnanti della scuola e docenti universitari si sono guardati bene dal farci notare che in democrazia ogni ruolo pubblico, dal pi√π elevato al meno appariscente, deve essere periodicamente restituito al popolo poich√© da questo per intero va potenzialmente condiviso. Pur con grandi difficolt√†, partendo da un parco elettori di appena 418.695 unit√†, per giunta fatto di soli uomini, siamo giunti ad una rosa di votanti, comprendente uomini e donne, cresciuta fino a raggiungere oggi le 50.000.000 di unit√†.
 
 <br><br>
 
-La mancanza di una adeguata visione storica, oltre che di una degna prospettiva futura, di una cultura complessivamente matura, ha invece impedito anche solo l'avvio del processo che avrebbe dovuto far evolvere la Funzione Pubblica. Con dispregio del fondamento democratico, il pubblico dipendente Ë ancora un mercenario, assunto a vita o precario, uno statale od un privato para-statale. Siamo ancora lontani da un pubblico impiego condotto dal suo legittimo proprietario: il cittadino, il quale si alterna con altri cittadini suoi pari e tutti parimenti comproprietari ed aventi diritto di compartecipazione dei ruoli della Res Publica.
+La mancanza di una adeguata visione storica, oltre che di una degna prospettiva futura, di una cultura complessivamente matura, ha invece impedito anche solo l'avvio del processo che avrebbe dovuto far evolvere la Funzione Pubblica. Con dispregio del fondamento democratico, il pubblico dipendente √® ancora un mercenario, assunto a vita o precario, uno statale od un privato para-statale. Siamo ancora lontani da un pubblico impiego condotto dal suo legittimo proprietario: il cittadino, il quale si alterna con altri cittadini suoi pari e tutti parimenti comproprietari ed aventi diritto di compartecipazione dei ruoli della Res Publica.
 
 <br><br><br>
 
-Per sommi capi questa Ë la situazione. Son qui dunque a rinverdire la collocazione del presente all'interno del nostro lungo processo storico. Son qui anche ad offrire la possibilit‡, a quei ricercatori, che volessero raggiungere un successo personale che altrimenti non potrebbero nemmeno immaginare, di aiutare la struttura pubblica del nostro Paese a svellersi dalla sua presente condizione tirannica ad una di perfetta democrazia.
+Per sommi capi questa √® la situazione. Son qui dunque a rinverdire la collocazione del presente all'interno del nostro lungo processo storico. Son qui anche ad offrire la possibilit√†, a quei ricercatori, che volessero raggiungere un successo personale che altrimenti non potrebbero nemmeno immaginare, di aiutare la struttura pubblica del nostro Paese a svellersi dalla sua presente condizione tirannica ad una di perfetta democrazia.
 
 <br><br>
 
-Il Premio Nobel sarebbe cosa gradita agli illustri ricercatori qui Presenti? Ebbene: coloro che lo ambissero non devono far altro che sviluppare, nel modo e settore che prediligono, quanto appena detto. Guardiamoci intorno: al momento non troveremo alcun accademico impegnato in questo straordinario compito. Attualmente non esiste concorrenza. Piuttosto che disdegnare queste parole, le si consideri come la pi˘ gran fortuna che possa capitare.
+Il Premio Nobel sarebbe cosa gradita agli illustri ricercatori qui Presenti? Ebbene: coloro che lo ambissero non devono far altro che sviluppare, nel modo e settore che prediligono, quanto appena detto. Guardiamoci intorno: al momento non troveremo alcun accademico impegnato in questo straordinario compito. Attualmente non esiste concorrenza. Piuttosto che disdegnare queste parole, le si consideri come la pi√π gran fortuna che possa capitare.
 
 <br><br><br>
 
-Fior di Nobel fioccheranno su coloro che amplieranno la visione di Elinor Ostrom, ristretta ai beni comuni naturali, estendendola a quelli funzionali. I legittimi proprietari (i cittadini) gestiscono i beni comuni meglio degli statali e degli operatori privati. Questo Ë il dato di fatto la cui scoperta Ë stata di recente premiata col Nobel. Gli aspetti connessi a questa ricerca sono molteplici, dalla ricostruzione del percorso storico a dimostrazioni di funzionalit‡ (nell'esistente o con simulazioni al computer), da considerazioni d'ordine legale ad altre a carattere filosofico. Trattasi di una ricerca che s'offre generosa a ben pi˘ di un ricercatore.
+Fior di Nobel fioccheranno su coloro che amplieranno la visione di Elinor Ostrom, ristretta ai beni comuni naturali, estendendola a quelli funzionali. I legittimi proprietari (i cittadini) gestiscono i beni comuni meglio degli statali e degli operatori privati. Questo √® il dato di fatto la cui scoperta √® stata di recente premiata col Nobel. Gli aspetti connessi a questa ricerca sono molteplici, dalla ricostruzione del percorso storico a dimostrazioni di funzionalit√† (nell'esistente o con simulazioni al computer), da considerazioni d'ordine legale ad altre a carattere filosofico. Trattasi di una ricerca che s'offre generosa a ben pi√π di un ricercatore.
 
 <br><br>
 
-Auguriamoci dunque vi sia ancora qualcuno che sia disposto ad investire la propria vita per uno scopo che pi˘ nobile non si puÚ: la liberazione dell'Italia e del mondo intero dagli indebiti tiranni nei Pubblici Impieghi. Buon lavoro a quegli illuminati dalla grazia scientifica che faranno questo grandioso dono all'umanit‡.
+Auguriamoci dunque vi sia ancora qualcuno che sia disposto ad investire la propria vita per uno scopo che pi√π nobile non si pu√≤: la liberazione dell'Italia e del mondo intero dagli indebiti tiranni nei Pubblici Impieghi. Buon lavoro a quegli illuminati dalla grazia scientifica che faranno questo grandioso dono all'umanit√†.
 
 <br><br><br><br>
 
