--- a/lab/ars/priebke-snowden.htm
+++ b/lab/ars/priebke-snowden.htm
@@ -3,11 +3,13 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="arsstyle1.css" type="text/css">
 
-<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit‡, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, la donna nel pubblico impiego">
+<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit√†, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, la donna nel pubblico impiego">
 
-<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, tesi di laurea, giurisprudenza, facolt‡ di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit‡, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit‡, lavoratori, studenti, operaio, immagine, testo, Stalin, unit‡, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit‡, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit‡ sanitarie locali, disoccupazione, mondo del lavoro">
+<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, tesi di laurea, giurisprudenza, facolt√† di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit√†, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit√†, lavoratori, studenti, operaio, immagine, testo, Stalin, unit√†, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit√†, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit√† sanitarie locali, disoccupazione, mondo del lavoro">
 
 <TITLE>Priebke / Snowden : i due protocolli</TITLE>
 
@@ -33,7 +35,7 @@
 
 <hr color="navy" size="1">
 
-<center><font face="verdana" color="navy" size="3"><i><a class="navy" href="legal_it.htm">Copyright ©</a> 10/06/<a class="navy" href="../tec/index.htm">46</a> <a class="navy" href="../eulab/noi.htm">Danilo D'Antonio</a> - <a class="navy" href="legal_it.htm">Alcuni diritti concessi</a></i></font></center>
+<center><font face="verdana" color="navy" size="3"><i><a class="navy" href="legal_it.htm">Copyright ¬©</a> 10/06/<a class="navy" href="../tec/index.htm">46</a> <a class="navy" href="../eulab/noi.htm">Danilo D'Antonio</a> - <a class="navy" href="legal_it.htm">Alcuni diritti concessi</a></i></font></center>
 
 <font face="verdana" size="5" color="navy">
 
@@ -41,17 +43,17 @@
 
 <br><br><br>
 
-Mentre tutto il mondo ringrazia gli intellettuali, premiandoli in vita ed oltre, questo stesso mondo vive il dramma di una evoluzione culturale bloccata da lungo tempo proprio da quelle stesse laureatissime menti preposte a farlo avanzare. Questo Ë il classico destino di un'arte, un sapere, una scienza consegnate nelle mani di membri di una casta: un ristagno fermamente ancorato sull'ultimo sommovolgimento culturale compiuto in passato, naturalmente, da persone sempre estranee agli ambienti ufficiali.
+Mentre tutto il mondo ringrazia gli intellettuali, premiandoli in vita ed oltre, questo stesso mondo vive il dramma di una evoluzione culturale bloccata da lungo tempo proprio da quelle stesse laureatissime menti preposte a farlo avanzare. Questo √® il classico destino di un'arte, un sapere, una scienza consegnate nelle mani di membri di una casta: un ristagno fermamente ancorato sull'ultimo sommovolgimento culturale compiuto in passato, naturalmente, da persone sempre estranee agli ambienti ufficiali.
 
 <br><br>
 
-Fatto sta che oggi, con tanti mezzi di comunicazione, con una intelligenza artificiale che gi‡ prende possesso di auto, frigoriferi e tv, l'umana intelligenza langue al punto da non accorgersi che una POLITICA SEPARATA dai CITTADINI dalla NERA CERCHIA di ASSUNTI a VITA nel PUBBLICO IMPIEGO NON PU“ PRODURRE NULLA di BUONO.
+Fatto sta che oggi, con tanti mezzi di comunicazione, con una intelligenza artificiale che gi√† prende possesso di auto, frigoriferi e tv, l'umana intelligenza langue al punto da non accorgersi che una POLITICA SEPARATA dai CITTADINI dalla NERA CERCHIA di ASSUNTI a VITA nel PUBBLICO IMPIEGO NON PU√í PRODURRE NULLA di BUONO.
 
 <br><br>
 
 <ul>
 
-Le cose precisamente stanno cosÏ:
+Le cose precisamente stanno cos√¨:
 
 <br><br>
 
@@ -77,7 +79,7 @@ s'impegnano invece a fare del loro MEGLIO ed oltre.
 
 <br>
 
-La cosa si spiega gi‡ intuitivamente. L'occhio del padrone (i cittadini) ingrassa non solo il cavallo ma pure la Res Publica. Ma se classifichiamo le cose in due diverse categorie di comportamento, le cose si chiariscono ulteriormente con fatti tipicamente presenti agli occhi di ognuno. Vediamo come ci si puÚ porre:
+La cosa si spiega gi√† intuitivamente. L'occhio del padrone (i cittadini) ingrassa non solo il cavallo ma pure la Res Publica. Ma se classifichiamo le cose in due diverse categorie di comportamento, le cose si chiariscono ulteriormente con fatti tipicamente presenti agli occhi di ognuno. Vediamo come ci si pu√≤ porre:
 
 <br><br>
 
@@ -96,14 +98,14 @@ per salvaguardare l'interesse mio: il POSTO FISSO e la CARRIERA.
 
 <br><br>
 
-tu dimmi ciÚ che devo fare ... ma IO me ne strafotto del posto fisso<br>
+tu dimmi ci√≤ che devo fare ... ma IO me ne strafotto del posto fisso<br>
 e della carriera e se qualcosa non va mi rivolgo subito al POPOLO!
 
 </ul>
 
 <br>
 
-Di fatto Ë estremamente facile COMANDARE avendo intorno tanti piccoli priebke, individui abbarbicati al posto fisso come cozze allo scoglio, poggiando su organizzazioni finto-pubbliche ma autenticamente tiranniche (organizzate ancora come lo furono molto tempo prima dell'era dichiarata democratica) chÈ escludono i cittadini. Il difficile Ë GOVERNARE circondati da attenti e premurosi snowden, da persone non solo disposte ma perfino desiderose di tornare semplici cittadini alla scadenza di un mandato temporaneo. E' la stessa differenza che intercorre tra l'andare verso il BASSO o verso l'ALTO. Tra lo scivolare e l'ascendere. Tra il regredire ed il progredire.
+Di fatto √® estremamente facile COMANDARE avendo intorno tanti piccoli priebke, individui abbarbicati al posto fisso come cozze allo scoglio, poggiando su organizzazioni finto-pubbliche ma autenticamente tiranniche (organizzate ancora come lo furono molto tempo prima dell'era dichiarata democratica) ch√© escludono i cittadini. Il difficile √® GOVERNARE circondati da attenti e premurosi snowden, da persone non solo disposte ma perfino desiderose di tornare semplici cittadini alla scadenza di un mandato temporaneo. E' la stessa differenza che intercorre tra l'andare verso il BASSO o verso l'ALTO. Tra lo scivolare e l'ascendere. Tra il regredire ed il progredire.
 
 <br><br>
 
@@ -117,8 +119,8 @@ detentori a vita del potere amministrativo e giudiziario!
 
 <br><br>
 
-Solo una umanit‡ deviata dalla giusta via,<br>
-inculcata massicciamente da costoro fin dalla tenera et‡,<br>
+Solo una umanit√† deviata dalla giusta via,<br>
+inculcata massicciamente da costoro fin dalla tenera et√†,<br>
 poteva giungere a sragionare in questo ottuso modo.
 
 </font>
@@ -127,11 +129,11 @@ poteva giungere a sragionare in questo ottuso modo.
 
 <br>
 
-E' evidente che decidendoci a democratizzare la Funzione Pubblica i presenti politici, non avendo pi˘ a disposizione degli acritici, fedelissimi carrieristi, si faranno velocemente da parte perchÈ del tutto incapaci di GOVERNARE SENZA COMANDARE. Gli attuali politici non saranno in grado di concepire idee buone a sufficienza da scongiurare la disapprovazione degli esigenti e raffinati snowden. Abituati alla facile vita permessa loro dai rozzi priebke mangiatutto, dovranno filarsela di corsa.
+E' evidente che decidendoci a democratizzare la Funzione Pubblica i presenti politici, non avendo pi√π a disposizione degli acritici, fedelissimi carrieristi, si faranno velocemente da parte perch√© del tutto incapaci di GOVERNARE SENZA COMANDARE. Gli attuali politici non saranno in grado di concepire idee buone a sufficienza da scongiurare la disapprovazione degli esigenti e raffinati snowden. Abituati alla facile vita permessa loro dai rozzi priebke mangiatutto, dovranno filarsela di corsa.
 
 <br><br>
 
-Spalancando i portoni del potere ad una nuova onda di leader che nemmeno pensavamo potessero esistere. S'affermeranno personalit‡ che, emarginatesi volontariamente per non essere coinvolte nel sacco della Res Publica, saranno riconosciute subito come capisaldi non di quell'unica virt˘, da commercialisti, l'onest‡, sÏ preziosa ma del tutto inutile da sola, bensÏ dell'intero complesso di straordinari POTERI dell'ANIMO (*) necessario a rendere rigogliosa e sana tanto una persona quanto una societ‡. 
+Spalancando i portoni del potere ad una nuova onda di leader che nemmeno pensavamo potessero esistere. S'affermeranno personalit√† che, emarginatesi volontariamente per non essere coinvolte nel sacco della Res Publica, saranno riconosciute subito come capisaldi non di quell'unica virt√π, da commercialisti, l'onest√†, s√¨ preziosa ma del tutto inutile da sola, bens√¨ dell'intero complesso di straordinari POTERI dell'ANIMO (*) necessario a rendere rigogliosa e sana tanto una persona quanto una societ√†. 
 
 <br><br>
 
@@ -143,7 +145,7 @@ Riassumiamolo.
 
 <font color="green">
 
-Da sempre nella Funzione Pubblica, con l'assunzione a vita nel Pubblico Impiego o la promessa di averla o con dei mercenari, si segue l'arcaica istituzionalizzazione del PROTOCOLLO PRIEBKE. Istituzionalizziamo invece il PROTOCOLLO SNOWDEN con assunzioni rigorosamente a TEMPO DETERMINATO in ogni Pubblico Impiego: posto fisso e carriera non inficeranno pi˘ il buon andamento delle cose. Avendo intorno persone non pi˘ traviate dall'interesse personale, la politica cambier‡ radicalmente, velocemente. E sar‡ la fine dei tirannici stati privatizzatori, divenendo gli stati realmente democratici, con grandi patrimoni pubblici curati e messi a frutto.
+Da sempre nella Funzione Pubblica, con l'assunzione a vita nel Pubblico Impiego o la promessa di averla o con dei mercenari, si segue l'arcaica istituzionalizzazione del PROTOCOLLO PRIEBKE. Istituzionalizziamo invece il PROTOCOLLO SNOWDEN con assunzioni rigorosamente a TEMPO DETERMINATO in ogni Pubblico Impiego: posto fisso e carriera non inficeranno pi√π il buon andamento delle cose. Avendo intorno persone non pi√π traviate dall'interesse personale, la politica cambier√† radicalmente, velocemente. E sar√† la fine dei tirannici stati privatizzatori, divenendo gli stati realmente democratici, con grandi patrimoni pubblici curati e messi a frutto.
 
 </font>
 
