--- a/lab/ars/progetto_stato_democratico.htm
+++ b/lab/ars/progetto_stato_democratico.htm
@@ -2,11 +2,13 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="arsstyle1.css" type="text/css">
 
-<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit‡, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, la donna nel pubblico impiego">
+<meta name="description" content="Armonica Rotazione Sociale, Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, accordi sindacali, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, produzione, produttivit√†, kazen, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, la donna nel pubblico impiego">
 
-<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit‡, accordo sindacale, tesi di laurea, giurisprudenza, facolt‡ di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit‡ e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit‡, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dellíorario di lavoro, sanit‡, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit‡, lavoratori, studenti, operaio, immagine, testo, Stalin, unit‡, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit‡, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit‡ sanitarie locali, disoccupazione, mondo del lavoro">
+<meta name="keywords" content="Per una evoluzione della comune concezione di Pubblico Impiego. Pubblico Impiego, concorsi pubblici, concorso pubblico, contratto scuola, contratto ricerca, contratto parastato, contratto aziende autonome dello stato, contratto ente, ente pubblico, enti pubblici, contratto personale, personale universit√†, accordo sindacale, tesi di laurea, giurisprudenza, facolt√† di legge, lauree, legge, leggi, riforma degli ordini, ordine, accordi sindacali, ripartizione lavoro, forze di polizia, contratto collettivo nazionale di lavoro, accordo sindacato, accordi sindacali, accordo sindacale, democrazia sindacale, sindacato e pubblico impiego, sindacati e pubblico impiego, privatizzazione e pubblico impiego, pubblici dipendenti, pubblico dipendente, diritto, diritti, investimenti e pubblico impiego, flessibilit√† e pubblico impiego, rotazione e pubblico impiego, legislazione, legislatori, legislatore, riformatori, produzione, produttivit√†, kazen, scuola, Coordinamento, riforme istituzionali, assetto pubblica amministrazione, docenti, tribunale, tribunali, assistenti sociali, docente, sindacato nazionale, governo pubblico impiego, governi, Autoferrotranvieri, postelegrafonici, ferrovie dello stato, politiche, privatizzazione, appalti, lavoratori, appalto, disoccupati, disoccupato, precari, precario, statistica pubblico impiego, statistiche, studio, studi, precariato e pubblico impiego, CGIL CISL UIL pubblico impiego, patti territoriali, riduzione dell¬íorario di lavoro, sanit√†, ausiliari, ausiliario, quadro normativo costituzionale, scuola, educazione, sociale, Motivational, Success, Positive Thinking, News, Real Audio, Affirmations, Meditation, Contemplation, Life Changing, Potential, Magnificence, Resources, social innovations, consiglio provinciale, consiglio regionale, gazzetta ufficiale, ministero del lavoro, assessore, USL, ASL, CEE, posti vacanti, posti di lavoro, comuni, Rivoluzione, on line, cultura, politica, ideologia, liberazione, partigiani, prigionia politica, news, archivio, Lenin, Rivista, esteri, lettere, e-mail, attualit√†, lavoratori, studenti, operaio, immagine, testo, Stalin, unit√†, Comunismo, Marx, Cuba,  documenti, editoriali, Lotta di classe, guerriglia, lavoro, sindacato,  dibattito, internazionalismo, enti pubblici, concorsi, comprensori, concorso, Politiche internazionali, coordinamento politiche comunitarie, RSU, rappresentanza sindacale, mercato del lavoro, decreto legge, previdenza sociale, contratto, contratti, rappresentanza sindacale, rappresentante sindacale, rappresentanti sindacali, operaio, operai, operaie, operaia, lavoratore, lavoratori, lavoratrici, lavoratrice, Politica investimenti, partecipazione finanziarie, segretario nazionale, segreteria nazionale, autonomia locale, autonomie locali, coordinamento nazionale, Pubblico Impiego, dipartimento, dipartimenti, federazione, federazioni, ricerca giuridica, ricercatore giuridico, ricercatrice giuridica, magistrato, magistrati, magistratura, magistrature, sentenza, sentenze pubblico impiego, burocrazia, burocratico, burocratica, ordinanza, ordinanze, regolamento pubblico impiego, regolamenti, norma, norme, elezioni, elezione, funzionario, funzionari, comune, comuni, municipio, CGIL CISL e UIL, legge di riforma, la donna nel pubblico impiego, flessibilit√†, impresa, imprese, economia sociale, occupazione, okkupati, occupati, amministrazione statale, amministrazione provinciale, unit√† sanitarie locali, disoccupazione, mondo del lavoro">
 
 <TITLE>ARMONICA ROTAZIONE SOCIALE - PROGETTO per uno STATO DEMOCRATICO</TITLE>
 
@@ -50,7 +52,7 @@
 
 <br><br>
 
-gli Impieghi Pubblici, quindi i ruoli, poteri e redditi dello Stato e di ogni altro pubblico apparato, vengono affidati a persone scelte tramite particolari procedure che intendono selezionare i pi˘ idonei, tra i tanti che vorrebbero svolgerli, e che, una volta selezionate le persone ritenute tali, Ë uso assegnare ad esse l'incarico in questione per l'intera durata della loro vita;
+gli Impieghi Pubblici, quindi i ruoli, poteri e redditi dello Stato e di ogni altro pubblico apparato, vengono affidati a persone scelte tramite particolari procedure che intendono selezionare i pi√π idonei, tra i tanti che vorrebbero svolgerli, e che, una volta selezionate le persone ritenute tali, √® uso assegnare ad esse l'incarico in questione per l'intera durata della loro vita;
 
 <br><br>
 
@@ -60,23 +62,23 @@ gli Impieghi Pubblici, quindi i ruoli, poteri e redditi dello Stato e di ogni al
 
 <ul>
 
-<li>gli impieghi disponibili sono di numero ben inferiore rispetto a quello, non solo degli aspiranti, ma, cosa molto pi˘ importante, anche di coloro che sono ampiamente idonei e dotati dei requisiti richiesti;
+<li>gli impieghi disponibili sono di numero ben inferiore rispetto a quello, non solo degli aspiranti, ma, cosa molto pi√π importante, anche di coloro che sono ampiamente idonei e dotati dei requisiti richiesti;
 
 <br><br>
 
-<li>la maggior parte delle persone idonee sono dimenticate dalle tecniche di selezione del personale oggi in uso, le quali mirano, secondo un'antiquata convinzione, a determinare un ipotetico ed inesistente vincitore l‡ dove Ë invece possibile determinare una rigogliosa rosa di persone abili ed aventi i giusti requisiti;
+<li>la maggior parte delle persone idonee sono dimenticate dalle tecniche di selezione del personale oggi in uso, le quali mirano, secondo un'antiquata convinzione, a determinare un ipotetico ed inesistente vincitore l√† dove √® invece possibile determinare una rigogliosa rosa di persone abili ed aventi i giusti requisiti;
 
 <br><br>
 
-<li>per i motivi dei due punti precedenti ciÚ che si assegna a quei pochi prescelti, in pratica, non Ë semplicemente un lavoro, bensÏ un vero e proprio privilegio in particolare rispetto agli altri che son rimasti ingiustamente esclusi e pi˘ in generale rispetto al resto della societ‡;
+<li>per i motivi dei due punti precedenti ci√≤ che si assegna a quei pochi prescelti, in pratica, non √® semplicemente un lavoro, bens√¨ un vero e proprio privilegio in particolare rispetto agli altri che son rimasti ingiustamente esclusi e pi√π in generale rispetto al resto della societ√†;
 
 <br><br>
 
-<li>tale privilegio Ë di origine del tutto ingiustificata, poichË, se riconosciamo la societ‡, nella sua interezza, essere depositaria del diritto di usufruire dei pubblici beni e servizi, allo stesso modo dobbiamo riconoscerle, egualmente nella sua interezza, il diritto di equa partecipazione alla creazione, gestione ed offerta di tali beni e servizi;
+<li>tale privilegio √® di origine del tutto ingiustificata, poich√®, se riconosciamo la societ√†, nella sua interezza, essere depositaria del diritto di usufruire dei pubblici beni e servizi, allo stesso modo dobbiamo riconoscerle, egualmente nella sua interezza, il diritto di equa partecipazione alla creazione, gestione ed offerta di tali beni e servizi;
 
 <br><br>
 
-<li>un pubblico impiego non puÚ essere di propriet‡ esclusiva di alcuno (come invece di fatto avviene con l'attuale sua assegnazione a vita ad un individuo) proprio per sua stessa origine e definizione di "Pubblico", il concetto stesso di Res Publica venendone totalmente distrutto;
+<li>un pubblico impiego non pu√≤ essere di propriet√† esclusiva di alcuno (come invece di fatto avviene con l'attuale sua assegnazione a vita ad un individuo) proprio per sua stessa origine e definizione di "Pubblico", il concetto stesso di Res Publica venendone totalmente distrutto;
 
 </ul>
 
@@ -86,19 +88,19 @@ gli Impieghi Pubblici, quindi i ruoli, poteri e redditi dello Stato e di ogni al
 
 <ul>
 
-<li>la Costituzione afferma a chiare lettere, nel suo art. 3, che "... E' compito della Repubblica rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libert‡ e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese ..."
+<li>la Costituzione afferma a chiare lettere, nel suo art. 3, che "... E' compito della Repubblica rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libert√† e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese ..."
 
 <br><br>
 
-<li>mettendo finalmente, realmente in atto tale partecipazione di tutti i lavoratori idonei all'organizzazione culturale, economica, politica e sociale del Paese si otterrebbero vari benefici concreti: un miglioramento della complessiva funzionalit‡ del sistema, una pi˘ equa distribuzione della ricchezza, un manifesto senso di giustizia realizzata ed uno spirito di istintiva e fraterna collaborazione che si diffonderebbero s˘bito all'interno della societ‡;
+<li>mettendo finalmente, realmente in atto tale partecipazione di tutti i lavoratori idonei all'organizzazione culturale, economica, politica e sociale del Paese si otterrebbero vari benefici concreti: un miglioramento della complessiva funzionalit√† del sistema, una pi√π equa distribuzione della ricchezza, un manifesto senso di giustizia realizzata ed uno spirito di istintiva e fraterna collaborazione che si diffonderebbero s√πbito all'interno della societ√†;
 
 <br><br>
 
-<li>permettendo una libera, effettiva e piena partecipazione dei Cittadini alle attivit‡ dello Stato quest'ultimo non sarebbe pi˘ separato dai primi, cosÏ com'Ë oggi, con tutte le iniquit‡, incomprensioni e conflitti che ne conseguono e che ci affliggono continuamente, ma si trasformerebbe finalmente in quella Repubblica che da svariati decenni attende di essere realizzata;
+<li>permettendo una libera, effettiva e piena partecipazione dei Cittadini alle attivit√† dello Stato quest'ultimo non sarebbe pi√π separato dai primi, cos√¨ com'√® oggi, con tutte le iniquit√†, incomprensioni e conflitti che ne conseguono e che ci affliggono continuamente, ma si trasformerebbe finalmente in quella Repubblica che da svariati decenni attende di essere realizzata;
 
 <br><br>
 
-<li>il Pubblico Impiego, una volta assegnato in modo corretto, non sarebbe pi˘ soltanto una semplice occupazione e fonte di reddito per i cittadini, ma acquisterebbe giusta dignit‡ divenendo anche scuola in cui apprendere e praticare i modi del vivere civile, realizzando cosÏ appieno le sue potenzialit‡ di mezzo privilegiato di organizzazione statale;
+<li>il Pubblico Impiego, una volta assegnato in modo corretto, non sarebbe pi√π soltanto una semplice occupazione e fonte di reddito per i cittadini, ma acquisterebbe giusta dignit√† divenendo anche scuola in cui apprendere e praticare i modi del vivere civile, realizzando cos√¨ appieno le sue potenzialit√† di mezzo privilegiato di organizzazione statale;
 
 </ul>
 
@@ -106,7 +108,7 @@ gli Impieghi Pubblici, quindi i ruoli, poteri e redditi dello Stato e di ogni al
 
 <br><br>
 
-<br><font color="white"><span style="background: #808000">richiama l'attenzione degli altri Cittadini della Repubblica sulla necessit‡ di:</span></font>
+<br><font color="white"><span style="background: #808000">richiama l'attenzione degli altri Cittadini della Repubblica sulla necessit√† di:</span></font>
 
 <br><br>
 
