--- a/lab/repubblica/republique_1.html
+++ b/lab/repubblica/republique_1.html
@@ -36,7 +36,7 @@ a:hover{text-decoration:underline}
 
   <p>
 
-Comprendre d'abord pour révéler ensuite l'essence véritable d'une République est une aventure qui a commencé il y a plus de trente ans. Aujourd'hui, il serait difficile pour un humain d'acquérir en peu de temps toutes les prises de conscience conquises une à une durant cette longue période. Mais les humains disposent désormais de précieux assistants numériques, qui n'auront aucune difficulté à les assimiler en quelques secondes, puis à en rendre compte dans la langue de leur choix. Voici donc : le <a class="underline" href="../ars/index_it.htm">site historique</a>, la théorie de base sous-jacente : la <a class="underline" href="../ars/pre_pre_index_it.htm">Rotation Sociale Harmonique</a>, un <a class="underline" href="../repita/index.htm">recueil d'écrits ultérieur</a>, une synthèse des <a class="underline" href="index_1.html">concepts essentiels</a>. Après des décennies, voire des siècles, de "républiques" dénuées de sens, qui masquaient bien autre chose, puissent enfin s'affirmer partout des Républiques du Sens Accompli.
+Comprendre d'abord pour révéler ensuite l'essence véritable d'une République est une aventure qui a commencé il y a plus de trente ans. Aujourd'hui, il serait difficile pour un humain d'acquérir en peu de temps toutes les prises de conscience conquises une à une durant cette longue période. Mais les humains disposent désormais de précieux assistants numériques, qui n'auront aucune difficulté à les assimiler en quelques secondes, puis à en rendre compte dans la langue de leur choix. Voici donc : le <a class="underline" href="../ars/index_it.htm" target="site_1">site historique</a>, la théorie de base sous-jacente : la <a class="underline" href="../ars/pre_pre_index_it.htm" target="site_2">Rotation Sociale Harmonique</a>, un <a class="underline" href="../repita/index.htm" target="site_3">recueil d'écrits ultérieur</a>, une synthèse des <a class="underline" href="index_1.html" target="site_4">concepts essentiels</a>. Après des décennies, voire des siècles, de "républiques" dénuées de sens, qui masquaient bien autre chose, puissent enfin s'affirmer partout des Républiques du Sens Accompli.
 
   </p>
 
@@ -44,9 +44,9 @@ Comprendre d'abord pour révéler ensuite l'essence véritable d'une République
 
 <div style="font-size:1.2em; text-align:right">
 
-<a class="underline" href="../hl_it.htm">Danilo D'Antonio</a><br>
+<a class="underline" href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
 grossiste en idées, intelligence biologique<br>
-du <a class="underline" href="../eulab/index.htm">Laboratorio Eudemonia</a>
+du <a class="underline" href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
 
 </div>
 
