--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -78,7 +78,9 @@ Ad ogni Autorità, Eccellenza e Personalità nel Paese
 <div style="background-color: #F8F8F8; width: 100%; padding: 12px;">
 
 Lettere al Presidente della Repubblica<br>
-<b><a class="line" href="pdr.html" target="">L'iniquità del D.P.R. 380/2001 offusca anche</a> <a class="line" href="pdr_1.html" target="">l’immagine del Presidente della Repubblica</a></b>
+<b><a class="line" href="pdr.html" target="" title="prima lettera">L'iniquità del D.P.R. 380/2001 offusca anche</a> <a class="line" href="pdr_1.html" target="" title="seconda lettera">l’immagine del Presidente della Repubblica</a></b>
+<br>
+<b><a class="line" href="info_pres.html" target="">Informativa agli Enti Locali, alle Associazioni, ai Professionisti, etc.</a>
 
 </div>
 
